fixed horizontal overflow

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,6 @@
 * {
   font-family: "Trebuchet MS";
+  overflow-x: hidden;
 }
 
 a {
